i18n/ja/docusaurus-plugin-content-docs/version-18/FormObjects/formObjects_overview.md
---
id: formObjectsOverview
title: 4D フォームオブジェクトについて
---

フォーム上のオブジェクトを編集することで、アプリケーションのフォームを構築しカスタマイズします。 オブジェクトの追加・配置、オブジェクトプロパティの設定、入力規制の追加によるビジネスルールの強化、操作に対して自動実行されるオブジェクトメソッドの追加などをおこなうことができます。

## アクティブオブジェクトとスタティックオブジェクト

4D フォームでは多くのビルトイン **アクティブ** オブジェクトおよび **スタティック** オブジェクトが提供されています:

- **アクティブオブジェクト** はインターフェース機能やデータベースタスクを実行します。 アクティブオブジェクトの種類は、 入力フィールド、コンボボックス、ドロップダウンリスト、ピクチャーボタンなど様々ですが、いずれもデータを表示したり、メモリに一時保存したり、ダイアログボックスを開く・レポートを印刷する・バックグラウンドプロセスを開始するなどの動作を実行したりします。
- **スタティックオブジェクト** (線、枠、背景ピクチャー等) は一般的に、フォームのアピアランスやラベル、グラフィックインターフェースを設定するために使用されます。 アクティブオブジェクトと異なり、スタティックオブジェクトには変数や式が割り当てられません。 しかし、スタティックオブジェクトにダイナミックオブジェクトを挿入することは可能です。


## オブジェクトの操作

4D フォームオブジェクトの追加や編集は次の方法でおこなえます:

*   **フォームエディター:** ツールバーからオブジェクトをフォーム上にドラッグ＆ドロップします。 フォームに配置したら、そのオブジェクトのプロパティをプロパティリストから編集できます。   
  詳細については [フォームの作成](https://doc.4d.com/4Dv18/4D/18/Building-forms.200-4575447.ja.html) を参照ください。

* **4D ランゲージ**: [オブジェクト(フォーム)](https://doc.4d.com/4Dv18/4D/18/Objects-Forms.201-4504342.ja.html) テーマのコマンド (`OBJECT DUPLICATE` や `OBJECT SET FONT STYLE` など) を使って、フィームオブジェクトを作成・定義することができます。

*   **ダイナミックフォーム内の JSON コード:** JSON を使ってプロパティを定義します。 [type](properties_Object.md#type) プロパティでオブジェクトタイプを定義し、提供されている他のプロパティのうち必要なものを設定します。  詳細については [ダイナミックフォーム](https://doc.4d.com/4Dv18/4D/18/Dynamic-Forms.300-4575729.ja.html) ページを参照ください。  
  次はボタンオブジェクトの例です:   
  ```
  { "type": "button", "style": "bevel", "text": "OK", "action": "Cancel", "left": 60, "top": 160, "width": 100, "height": 20 }
